[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "MikuPush"
path = "src/launcher.rs"
subsystem = "windows"

[[bin]]
name = "MikuPush-upload"
path = "src/requester.rs"
subsystem = "windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
winapi = {version = "0.3.9", features = ["winbase"]}
